--- a/css/style.css
+++ b/css/style.css
@@ -1,703 +1,1 @@
-*{
-    margin: 0px;
-    padding: 0px;
-    box-sizing: border-box;
-}
-p{
-    font-size: 14px;
-    color: rgb(189, 189, 189);
-    text-align: justify;
-}
-.fa{
-    margin: 10px;
-}
-h1{
-    font-size: 80px;
-    color: white;
-}
-h2{
-    font-size: 60px;
-    line-height: 68px;
-    color: white;
-}
-h3{
-    font-size: 25px;
-    color: aqua;
-}
-h4{
-    font-size: 27px;
-    color: white;
-    margin-bottom: 20px;
-}
-li{
-    padding: 15px 10px 15px 10px;
-    list-style-type: none;
-    font-size: 16px;
-}
-a {
-    text-decoration: none;
-    color: white;
-    transition: 0.3s ease;
-}
-a:hover {
-    color: white;
-    text-shadow: 0 0 30px #ffffff80;
-}
-a :hover{
-    color: aqua;
-}
-img{
-    width: 100%;
-    height: auto;
-}
-.logo_top{
-    width: 120px;
-}
-.button1 {
-    background-color: #67d4ff;
-    border:  #67d4ff 1px solid;
-    padding: 10px;
-    font-size: 18px;
-    cursor: pointer;
-    transition: 0.3s ease;
-}
-.button1 a{
-    padding: 25px 30px 25px 30px;
-}
-.button1:hover{
-    background-color: #67d4ff00;
-    border:  #67d4ff 1px solid;
-    padding: 10px;
-    font-size: 18px;
-    cursor: pointer;
-    transition: 0.3s ease;
-}
-.button1 a{
-    padding: 25px 30px 25px 30px;
-}
-.button2 {
-    border:  #67d4ff 1px solid;
-    padding: 10px;
-    font-size: 18px;
-    cursor: pointer;
-    transition: 0.3s ease;
-    margin-left: 60px;
-}
-.button2 a{
-    padding: 25px 30px 25px 30px;
-    color: #67d4ff;
-}
-.button2:hover {
-    background-color: #67d4ff;
-    border:  #67d4ff 1px solid;
-    padding: 10px;
-    font-size: 18px;
-    cursor: pointer;
-    transition: 0.3s ease;
-}
-.button2 a:hover{
-    color: white;
-}
-body{
-    background-color: #202020;
-    display: grid;
-    grid-template-areas:
-    "header"
-    "main"
-    "footer";
-    grid-template-columns: 1fr;
-    grid-template-rows: auto auto auto;
-    font-size: 16px;
-    font-family: "Poppins", sans-serif;
-}
-header{grid-area: header;}
-main{grid-area: main;}
-footer{grid-area: footer;}
-header{
-    background-color: #2c2c2c;
-    display: grid;
-    grid-template-areas:
-    "logo menuPrincipal topRedes";
-    grid-template-columns: auto;
-    grid-template-rows: auto;
-    justify-content: space-between;
-    align-items: center;
-    padding: 20px 40px 20px 40px;
-}
-.menuPrincipal ul, .button {display: flex;}
-.main{
-    display: grid;
-    grid-template-areas:
-    "videoPortada "
-    "servicios";
-    grid-template-columns: 1fr;
-    grid-template-rows: auto auto;
-}
-.videoPortada{grid-area: videoPortada; background-image:url("../assets/img/fondo_web.png"); padding: 200px 100px 200px;}
-.servicios{grid-area: servicios;}
-.servicios{
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    grid-template-areas:
-    "columnServ columnServ columnServTitle";
-    grid-template-rows: auto;
-    align-items: center;
-    column-gap: 100px;
-    padding: 50px;
-    margin: 50px 0 50px 0;
-}
-.columnServ{background:#0000004d;}
-.columnServ h3{padding: 20px 30px;}
-.columnServ p{padding: 30px;}
-.columnServ li{padding: 0px 30px 30px; text-align: end;}
-footer{
-    display: grid;
-    grid-template-columns: 100%;
-    grid-template-areas:
-    "parnert"
-    "navFooter"
-    "copyRights";
-    grid-template-rows: auto auto auto;
-}
-.parnert{grid-area: parnert;}
-.navFooter{grid-area: navFooter;}
-.copyRights{grid-area: copyRights;}
-.parnert{
-    display: grid;
-    grid-template-columns: auto;
-    grid-template-areas:
-    "textParnert logos";
-    grid-template-rows: auto;
-    align-items: center;
-    column-gap: 100px;
-    padding: 40px 50px 40px 50px;
-    border-top: grey solid 1px;
-    justify-content: space-between;
-}
-.logos{display: flex;}
-.parnert .logo{width: 180px;}
-.navFooter{
-    display: grid;
-    grid-template-columns: auto;
-    grid-template-areas:
-    "columnMenus columnMenus columnLogo";
-    grid-template-rows: auto;
-    justify-content: space-between;
-    padding: 80px 50px 80px 50px;
-    border-top: grey solid 1px;
-}
-.columnLogo{max-width: 200px;}
-.navFooter li{padding: 0;font-size: 14px;}
-.copyRights{
-    background-color: #0000004d;
-    display: grid;
-    grid-template-columns: auto;
-    grid-template-areas:
-    "footerRedes footerCopy";
-    grid-template-rows: auto;
-    justify-content: space-between;
-    padding: 30px;
-}
-.mainContacto{
-    display: grid;
-    grid-template-columns: 1fr;
-    grid-template-areas:
-    "titleContact"
-    "contact";
-    grid-template-rows: auto auto;
-    padding: 50px;
-    margin-top: 50px;
-    margin-bottom: 50px;
-}
-.contact{grid-area: contact;}
-.contact{
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    grid-template-areas:
-    "formContact maps";
-    grid-template-rows: auto;
-    column-gap: 100px;
-    margin: 50px 0 50px 0;
-}
-main .contact .formContact .inputGroup input[type=text],
-main .contact .formContact .inputGroup input[type=email],
-main .contact .formContact .inputGroup input[type=tel],
-main .contact .formContact .inputGroup select[type=selec],
-main .contact .formContact .inputGroup textarea {
-    font-family: "Poppins", sans-serif;
-    font-size: 16px;
-    color: white;
-    width: 100%;
-    outline: none;
-    padding: 10px 10px 10px 10px;
-    background: none;
-    border: 1px solid #E2E2E2;
-    margin-bottom: 20px;
-    background-color: #181818;
-}
-main .contact .formContact .inputGroup label{
-    font-size: 14px;
-    font-weight: 600;
-    color: white;
-    display: block;
-    margin-bottom: 5px;
-}
-main .contact .formContact .inputGroup option{
-    font-size: 14px;
-    color: white;
-    display: block;
-    margin-bottom: 5px;
-    border-radius: 0px;
-}
-main .contact .formContact input[type=submit] {
-    background: #67d4ff00;
-    font-family: "Poppins", sans-serif;
-    font-size: 16px;
-    color: white;
-    border-radius: 1px;
-    border: 2px solid white;
-    cursor: pointer;
-    margin-top: 2rem;
-    padding: 15px;
-    width: 30%;
-}
-main .contact .formContact input[type=submit]:hover{
-    background: white;
-    color:#202020;
-    font-weight: 600;
-}
-.mainServicio{
-    display: grid;
-    grid-template-areas:
-    "videoPortada "
-    "servicios";
-    grid-template-columns: 1fr;
-    grid-template-rows: auto auto;
-    padding: 50px;
-    margin-top: 50px;
-    margin-bottom: 100px;
-    grid-gap: 100px;
-}
-.servics{
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    grid-area: 
-    "servicsTextI servicsImg"
-    "servicsImg servicsText1";
-    grid-template-rows: auto auto;
-}
-.servicsTextI{
-    margin-right: 100px;
-    margin-top: 200px;
-}
-.servicsText1{
-    margin-left: 100px;
-    margin-top: 200px;
-}
-.servics .servicsImg{
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    grid-auto-rows: 250px;
-    grid-gap: 10px;
-}
-.galeriaItem{
-    position: relative;
-}
-.servics img{
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-}
-.galeriaItem h5{
-    position: absolute;
-    bottom: 0;
-    color: white;
-    background: #18181836;
-    width: 100%;
-    margin: 0;
-    padding: 10px;
-}
-.galeriaItem:nth-child(3){
-    grid-row-start: span 2;
-}
-.galeriaItem:nth-child(4) {
-    grid-column-start: span 2;
-}
-.galeriaItem:nth-child(5){
-    grid-row-start: span 2;
-}
-.galeriaItem:nth-child(8) {
-    grid-column-start: span 2;
-}
-.mainPortafolio{
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    grid-template-areas:
-    "videoPortada videoPortada"
-    "textColunm textColunm1"
-    "cliente cliente"
-    "cliente1 cliente1"; 
-    grid-template-rows: auto;
-    margin-bottom: 100px;
-    grid-gap: 50px;
-}
-.videoPortada{grid-area: videoPortada;}
-.textColunm{grid-area: textColunm; margin-left: 50px;}
-.textColunm1{grid-area: textColunm1; margin-right: 50px;}
-.cliente{grid-area: cliente;}
-.cliente1{grid-area: cliente1;}
-
-.cliente{
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    grid-template-areas: 
-    "clienteText clienteImg"
-    "clienteImg1 clienteText1";
-    grid-template-rows: auto;
-    grid-gap: 50px;
-    padding: 50px;
-}
-.clienteText{grid-area: clienteText; margin-top: 150px;}
-.clienteImg{
-    grid-area: clienteImg; 
-    display: grid; 
-    grid-template-columns: repeat(2, 1fr); 
-    grid-gap: 10px;
-}
-.clienteImg img{
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-}
-.clienteItem:nth-child(1) {
-    grid-row-start: span 2;
-}
-.clienteText1{grid-area: clienteText1; text-align: end; margin-top: 150px;}
-.clienteImg1{
-    grid-area: clienteImg1;
-    display: grid; 
-    grid-template-columns: repeat(2, 1fr); 
-    grid-gap: 10px;
-}
-.clienteImg1 img{
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-}
-.clienteItem1:nth-child(2) {
-    grid-row-start: span 2;
-    grid-template-columns: repeat(2, 1fr); 
-}
-.mainCurriculum{
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    grid-template-areas:
-    "datosText datosPhoto"
-    "datosText datosPhoto"
-    "tecnologias tecnologias"
-    "expericiaProyec expericiaProyec1";
-    padding: 50px;
-    grid-gap: 100px;
-    color: #E2E2E2;
-    margin-bottom: 100px;
-    margin-top: 50px;
-}
-.datosText{grid-area: datosText;}
-.datosPhoto{grid-area: datosPhoto; align-items: flex-start;}
-.datosPhoto img{
-    justify-content: center;
-    padding-left: 30%;
-    width: 100%;
-    height: auto;
-    object-fit: cover;
-}
-.datosText{grid-area: datosText;}
-.tecnologias{
-    grid-area: tecnologias;
-    display: grid;
-    grid-template-columns: 1fr;
-    grid-template-areas:
-    "titleC"
-    "bannerGaleria"
-}
-.tecnologias .bannerGaleria {
-    display: grid; 
-    grid-template-columns: repeat(8, 1fr);
-    grid-gap: 20px; 
-    grid-auto-rows: 150x;
-    margin-top: 20px;
-}
-.bannerGaleria img{
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-}
-.expericiaProyec{grid-area: expericiaProyec;}
-.expericiaProyec1{grid-area: expericiaProyec1;}
-
-
-
-
-/* Media Queries */
-@media screen and (max-width: 1500px){
-    h3{
-        padding: 5px 30px;
-    }
-    .mainCurriculum h3{
-        padding: 0px 0px;
-    }
-    h2{
-        font-size: 40px;
-        line-height: 44px;
-    }
-    .columnServ p {
-        padding: 0 30px 5px;
-        font-size: 12px;
-    }
-    .servicios{
-        column-gap: 30px;
-        grid-template-columns: 1fr 1fr;
-        grid-template-areas:
-        "columnServTitle columnServTitle"
-        "columnServ columnServ";
-    }
-    .columnServTitle{grid-area: columnServTitle; margin-bottom: 40px;}
-    .parnert {
-        column-gap: 30px;
-    }
-    .servics{
-        grid-template-columns: 1fr;
-        grid-area: 
-        "servicsTextI"
-        "servicsImg"
-        "servicsTextI1"
-        "servicsImg";
-        grid-template-rows: auto auto auto auto;
-    }
-    .servicsTextI{
-        margin-right: 50px;
-        margin-top: 0;
-        margin-bottom: 40px;
-    }
-    .datosPhoto img{
-        padding-left: 10%;
-    }
-    .datosPhoto img{
-        padding-left: 10%;
-    }
-}
-
-@media screen and (max-width: 1150px){
-    .cliente{
-        grid-template-columns: 1fr;
-        grid-template-areas: 
-        "clienteText"
-        "clienteImg"
-        "clienteText1"
-        "clienteImg1" ;
-        padding: 0 50px 0 50px;
-    }
-    .clienteText{
-        margin-top: 0px;
-    }
-    .clienteText1{
-        margin-top: 0px;
-    }
-    .tecnologias .bannerGaleria {
-        grid-template-columns: repeat(4, 1fr);
-    }
-    .mainCurriculum p{
-        font-size: 13px;
-    }
-}
-
-
-
-@media screen and (max-width: 910px){
-    .topRedes{
-        display: none;
-    }
-    header{
-        display: grid;
-        grid-template-areas:
-        "logo menuPrincipal";
-    }
-    h1{
-        font-size: 55px;
-        line-height: 54px;
-    }
-    .parnert{
-        grid-template-columns: 1fr;
-        grid-template-areas:
-        "textParnert"
-        "logos";
-    }
-    .textParnert{grid-area: textParnert; margin-bottom:20px;}
-    .logos{
-        justify-content: space-between;
-    }
-    .columnLogo{
-        max-width: 160px;
-    }
-    .mainContacto{
-        margin-top: 0px;
-        margin-bottom: 0px;
-    }
-    .contact{
-        grid-template-columns: 1fr;
-        grid-template-areas:
-        "formContact"
-        "maps";
-        grid-template-rows: auto;
-        margin: 50px 0 50px 0;
-    }
-    .maps{
-        height: 400px;
-        margin-bottom: 20px;
-    }
-    .mainCurriculum {
-        grid-gap: 40px;
-    }
-    .mainPortafolio{
-        margin-bottom: 40px;
-    }
-    .datosPhoto img{
-        padding-left: 0;
-    }
-}
-
-
-
-
-@media screen and (max-width: 740px){
-    .videoPortada{
-        padding: 100px 50px 100px;;
-    }
-    .columnLogo{display: none;}
-    .menuFooter{display: none;}
-    .header, .navFooter, .copyRights{
-        grid-template-columns: 1fr;
-        grid-template-areas:
-        "logo"
-        "menuPrincipal"
-        "columnMenus"
-        "footerRedes"
-        "footerCopy"
-    }
-    .logo{grid-area: logo; justify-self: center;}
-    .menuPrincipal{grid-area: menuPrincipal; justify-self: center;}
-    .footerRedes{grid-area: footerRedes;justify-self: center;}
-    .footerCopy{grid-area: footerCopy;justify-self: center;}
-    .navFooter{grid-area:navFooter; padding: 20px;}
-    .columnMenus{grid-area: columnMenus;justify-self: center;}
-    .columnMenus ul{display: flex;}
-    .columnMenus ul a{padding: 14px;}
-    .servicios{
-        grid-template-columns: 1fr;
-        grid-gap: 30px;
-        grid-template-areas:
-        "columnServTitle"
-        "columnServ"
-        "columnServ"
-    }
-    .mainServicio{
-        margin-top: 40px;
-        margin-bottom: 40px;
-    }
-    .servics .servicsImg{
-        display: grid;
-        grid-template-columns: 1fr  1fr;
-        grid-gap: 10px;
-    }
-    .galeriaItem h5{
-        font-size: 10px;
-    }
-    .galeriaItem:nth-child(1){
-        grid-row-start: span 2;
-    }
-    .galeriaItem:nth-child(4) {
-        grid-column-start: span 1;
-    }
-    .galeriaItem:nth-child(5){
-        grid-row-start: span 2;
-    }
-    .galeriaItem:nth-child(8) {
-        grid-column-start: span 2;
-    }
-    .mainPortafolio{
-        grid-template-columns: 1fr;
-        grid-template-areas:
-        "videoPortada"
-        "textColunm"
-        "textColunm1"
-        "cliente"
-        "cliente1";
-        grid-gap: 30px;
-    }
-    .textColunm{
-        margin-left: 0px;
-        padding: 0 50px 0 50px;
-    }
-    .textColunm1{
-        margin-right: 0px;
-        padding: 0 50px 0 50px;
-        margin-bottom: 50px;
-    }
-    .mainCurriculum{
-        grid-template-columns: 1fr;
-        grid-template-areas:
-        "datosPhoto"
-        "datosText"
-        "tecnologias"
-        "expericiaProyec"
-        "expericiaProyec1";
-        padding: 50px;
-        color: #E2E2E2;
-        margin-bottom: 50px;
-        margin-top: 50px;
-    }
-}
-
-
-
-
-@media screen and (max-width: 660px){
-    .logo{
-        max-width: 90px;
-    }
-    .menuPrincipal li{
-        padding: 14px 6px 14px 6px;
-        font-size: 13px;
-    }
-    p{
-        font-size: 12px;
-    }
-    h1{
-        font-size: 35px;
-        line-height: 38px;
-    }
-    h4{
-        font-size: 19px;
-    }
-    .button1{
-        font-size: 16px;
-    }
-    .button1 a{
-        padding: 0px 20px 0px 20px;
-    }
-    .button1:hover{
-        font-size: 16px;
-    }
-    .button2{
-        font-size: 16px;
-    }
-    .button2 a{
-        padding: 0px 20px 0px 20px;
-    }
-    .button2:hover{
-        font-size: 16px;
-    }
-    .servics .servicsImg{
-        grid-auto-rows: 200px;
-    }
-}
+/*# sourceMappingURL=style.css.map */
