--- a/css/constantes.css
+++ b/css/constantes.css
@@ -103,61 +103,4 @@ a:hover {
 }
 .button2 a:hover {
   color: white;
-}
-
-footer {
-  display: grid;
-  grid-template-columns: 100%;
-  grid-template-areas: "parnert" "navFooter" "copyRights";
-  grid-template-rows: auto auto auto;
-}
-
-.parnert {
-  grid-area: parnert;
-  display: grid;
-  grid-template-columns: auto;
-  grid-template-areas: "textParnert logos";
-  grid-template-rows: auto;
-  align-items: center;
-  -moz-column-gap: 100px;
-  column-gap: 100px;
-  padding: 40px 50px 40px 50px;
-  border-top: grey solid 1px;
-  justify-content: space-between;
-}
-.parnert .logos {
-  display: flex;
-}
-.parnert .logos .logo {
-  width: 180px;
-}
-
-.navFooter {
-  grid-area: navFooter;
-}
-
-.copyRights {
-  grid-area: copyRights;
-}
-
-body {
-  background-color: #202020;
-  display: grid;
-  grid-template-areas: "header" "main" "footer";
-  grid-template-columns: 1fr;
-  grid-template-rows: auto auto auto;
-  font-size: 16px;
-  font-family: "Poppins", sans-serif;
-}
-
-header {
-  grid-area: header;
-}
-
-main {
-  grid-area: main;
-}
-
-footer {
-  grid-area: footer;
-}/*# sourceMappingURL=style.css.map */
+}/*# sourceMappingURL=constantes.css.map */
