--- a/css/footer.css
+++ b/css/footer.css
@@ -27,8 +27,29 @@ footer {
 
 .navFooter {
   grid-area: navFooter;
+  display: grid;
+  grid-template-columns: auto;
+  grid-template-areas: "columnMenus columnMenus columnLogo";
+  grid-template-rows: auto;
+  justify-content: space-between;
+  padding: 80px 50px 80px 50px;
+  border-top: grey solid 1px;
+}
+.navFooter .columnLogo {
+  max-width: 200px;
+}
+.navFooter .navFooter li {
+  padding: 0;
+  font-size: 14px;
 }
 
 .copyRights {
   grid-area: copyRights;
+  background-color: rgba(0, 0, 0, 0.3019607843);
+  display: grid;
+  grid-template-columns: auto;
+  grid-template-areas: "footerRedes footerCopy";
+  grid-template-rows: auto;
+  justify-content: space-between;
+  padding: 30px;
 }/*# sourceMappingURL=footer.css.map */
