--- a/scss/footer.scss
+++ b/scss/footer.scss
@@ -4,6 +4,7 @@ footer {
     grid-template-areas: "parnert" "navFooter" "copyRights";
     grid-template-rows: auto auto auto;
 }
+
 .parnert {
     grid-area: parnert;
     display: grid;
@@ -23,5 +24,33 @@ footer {
             }
         }
 }
-.navFooter {grid-area: navFooter;}
-.copyRights {grid-area: copyRights;}
+
+.navFooter {
+    grid-area: navFooter;
+    display: grid;
+    grid-template-columns: auto;
+    grid-template-areas: "columnMenus columnMenus columnLogo";
+    grid-template-rows: auto;
+    justify-content: space-between;
+    padding: 80px 50px 80px 50px;
+    border-top: grey solid 1px;
+    .columnLogo {
+        max-width: 200px;
+    }
+    .navFooter li {
+        padding: 0;
+        font-size: 14px;
+    }
+}
+
+
+.copyRights {
+    grid-area: copyRights;
+    background-color: rgba(0, 0, 0, 0.3019607843);
+    display: grid;
+    grid-template-columns: auto;
+    grid-template-areas: "footerRedes footerCopy";
+    grid-template-rows: auto;
+    justify-content: space-between;
+    padding: 30px;
+}
