--- a/css/style.css
+++ b/css/style.css
@@ -105,6 +105,21 @@ a:hover {
   color: white;
 }
 
+header {
+  background-color: #2c2c2c;
+  display: grid;
+  grid-template-areas: "logo menuPrincipal topRedes";
+  grid-template-columns: auto;
+  grid-template-rows: auto;
+  justify-content: space-between;
+  align-items: center;
+  padding: 20px 40px 20px 40px;
+}
+
+.menuPrincipal ul, .button {
+  display: flex;
+}
+
 footer {
   display: grid;
   grid-template-columns: 100%;
