--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,5 +1,6 @@
 @import "constantes.scss";
 @import "header.scss";
+@import "home.scss";
 @import "footer.scss";
 body {
     background-color: #202020;
