--- a/css/style.css
+++ b/css/style.css
@@ -159,6 +159,74 @@ header {
   text-align: end;
 }
 
+.mainContacto {
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-template-areas: "titleContact" "contact";
+  grid-template-rows: auto auto;
+  padding: 50px;
+  margin-top: 50px;
+  margin-bottom: 50px;
+}
+
+.contact {
+  grid-area: contact;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-template-areas: "formContact maps";
+  grid-template-rows: auto;
+  -moz-column-gap: 100px;
+  column-gap: 100px;
+  margin: 50px 0 50px 0;
+}
+.contact .formContact .inputGroup input[type=text],
+.contact .formContact .inputGroup input[type=email],
+.contact .formContact .inputGroup input[type=tel],
+.contact .formContact .inputGroup select[type=selec],
+.contact .formContact .inputGroup textarea {
+  font-family: "Poppins", sans-serif;
+  font-size: 16px;
+  color: white;
+  width: 100%;
+  outline: none;
+  padding: 10px 10px 10px 10px;
+  background: none;
+  border: 1px solid #E2E2E2;
+  margin-bottom: 20px;
+  background-color: #181818;
+}
+.contact .formContact .inputGroup label {
+  font-size: 14px;
+  font-weight: 600;
+  color: white;
+  display: block;
+  margin-bottom: 5px;
+}
+.contact .formContact .inputGroup option {
+  font-size: 14px;
+  color: white;
+  display: block;
+  margin-bottom: 5px;
+  border-radius: 0px;
+}
+.contact .formContact input[type=submit] {
+  background: rgba(103, 212, 255, 0);
+  font-family: "Poppins", sans-serif;
+  font-size: 16px;
+  color: white;
+  border-radius: 1px;
+  border: 2px solid white;
+  cursor: pointer;
+  margin-top: 2rem;
+  padding: 15px;
+  width: 30%;
+}
+.contact .formContact input[type=submit]:hover {
+  background: white;
+  color: #202020;
+  font-weight: 600;
+}
+
 footer {
   display: grid;
   grid-template-columns: 100%;
