--- a/css/style.css
+++ b/css/style.css
@@ -159,6 +159,75 @@ header {
   text-align: end;
 }
 
+.mainServicio {
+  display: grid;
+  grid-template-areas: "videoPortada " "servicios";
+  grid-template-columns: 1fr;
+  grid-template-rows: auto auto;
+  padding: 50px;
+  margin-top: 50px;
+  margin-bottom: 100px;
+  grid-gap: 100px;
+}
+.mainServicio .servics {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-area: "servicsTextI servicsImg" "servicsImg servicsText1";
+  grid-template-rows: auto auto;
+}
+.mainServicio .servics .servicsTextI {
+  margin-right: 100px;
+  margin-top: 200px;
+}
+.mainServicio .servics .servicsText1 {
+  margin-left: 100px;
+  margin-top: 200px;
+}
+.mainServicio .servics .servicsImg {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-auto-rows: 250px;
+  grid-gap: 10px;
+}
+.mainServicio .servics .servicsImg .galeriaItem {
+  position: relative;
+}
+.mainServicio .servics .servicsImg .galeriaItem img {
+  width: 100%;
+  height: 100%;
+  -o-object-fit: cover;
+  object-fit: cover;
+}
+.mainServicio .servics .servicsImg .galeriaItem h5 {
+  position: absolute;
+  bottom: 0;
+  color: white;
+  background: rgba(24, 24, 24, 0.2117647059);
+  width: 100%;
+  margin: 0;
+  padding: 10px;
+}
+.mainServicio .servics .servicsImg .galeriaItem:nth-child(3) {
+  grid-row-start: span 2;
+}
+.mainServicio .servics .servicsImg .galeriaItem:nth-child(4) {
+  grid-column-start: span 2;
+}
+.mainServicio .servics .servicsImg .galeriaItem:nth-child(5) {
+  grid-row-start: span 2;
+}
+.mainServicio .servics .servicsImg .galeriaItem:nth-child(8) {
+  grid-column-start: span 2;
+}
+
+.videoPortada {
+  grid-area: videoPortada;
+}
+
+.servicios {
+  grid-area: servicios;
+}
+
 .mainContacto {
   display: grid;
   grid-template-columns: 1fr;
