--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,6 +1,7 @@
 @import "constantes.scss";
 @import "header.scss";
 @import "home.scss";
+@import "clientes.scss";
 @import "contacto.scss";
 @import "footer.scss";
 body {
