--- a/css/style.css
+++ b/css/style.css
@@ -169,6 +169,12 @@ header {
   margin-bottom: 100px;
   grid-gap: 100px;
 }
+.mainServicio .videoPortada {
+  grid-area: videoPortada;
+}
+.mainServicio .servicios {
+  grid-area: servicios;
+}
 .mainServicio .servics {
   display: grid;
   grid-template-columns: 1fr 1fr;
@@ -218,14 +224,6 @@ header {
 }
 .mainServicio .servics .servicsImg .galeriaItem:nth-child(8) {
   grid-column-start: span 2;
-}
-
-.videoPortada {
-  grid-area: videoPortada;
-}
-
-.servicios {
-  grid-area: servicios;
 }
 
 .mainContacto {
