--- a/scss/style.scss
+++ b/scss/style.scss
@@ -2,6 +2,7 @@
 @import "header.scss";
 @import "home.scss";
 @import "clientes.scss";
+@import "curriculum.scss";
 @import "contacto.scss";
 @import "footer.scss";
 body {
