--- a/scss/style.scss
+++ b/scss/style.scss
@@ -4,6 +4,7 @@
 @import "clientes.scss";
 @import "curriculum.scss";
 @import "contacto.scss";
+@import "portafolio.scss";
 @import "footer.scss";
 body {
     background-color: #202020;
