--- a/scss/clientes.scss
+++ b/scss/clientes.scss
@@ -1,12 +1,14 @@
+$cons:50px;
+/*Construccion*/
 .mainServicio {
     display: grid;
     grid-template-areas: "videoPortada " "servicios";
     grid-template-columns: 1fr;
     grid-template-rows: auto auto;
-    padding: 50px;
-    margin-top: 50px;
-    margin-bottom: 100px;
-    grid-gap: 100px;
+    padding: $cons;
+    margin-top: $cons;
+    margin-bottom: $cons*2;
+    grid-gap: $cons*2;
     .videoPortada{grid-area:videoPortada;}
     .servicios{grid-area:servicios;}
     .servics {
@@ -15,18 +17,18 @@
         grid-area: "servicsTextI servicsImg" "servicsImg servicsText1";
         grid-template-rows: auto auto;
         .servicsTextI {
-            margin-right: 100px;
-            margin-top: 200px;
+            margin-right: $cons*2;
+            margin-top: $cons*4;
         }
         .servicsText1 {
-            margin-left: 100px;
-            margin-top: 200px;
+            margin-left: $cons*2;
+            margin-top: $cons*4;
         }
         .servicsImg {
             display: grid;
             grid-template-columns: repeat(3, 1fr);
-            grid-auto-rows: 250px;
-            grid-gap: 10px;
+            grid-auto-rows: $cons*5;
+            grid-gap: $cons/5;
             .galeriaItem {
                 position: relative;
                 img {
@@ -42,7 +44,7 @@
                     background: rgba(24, 24, 24, 0.2117647059);
                     width: 100%;
                     margin: 0;
-                    padding: 10px;
+                    padding: $cons/5;
                 }
                 &:nth-child(3) {
                     grid-row-start: span 2;
@@ -61,3 +63,7 @@
     }
 }
 
+
+
+
+/*aplicar operaciones y constantes */
