--- a/scss/curriculum.scss
+++ b/scss/curriculum.scss
@@ -1,12 +1,14 @@
+$cons:50px;
+/*Construccion*/
 .mainCurriculum {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     grid-template-areas: "datosText datosPhoto" "datosText datosPhoto" "tecnologias tecnologias" "expericiaProyec expericiaProyec1";
-    padding: 50px;
-    grid-gap: 100px;
+    padding: $cons;
+    grid-gap: $cons*2;
     color: #E2E2E2;
-    margin-bottom: 100px;
-    margin-top: 50px;
+    margin-bottom: $cons*2;
+    margin-top: $cons;
     .datosText {grid-area: datosText;}
     .datosPhoto {
         grid-area: datosPhoto;
@@ -30,9 +32,9 @@
             grid-area: bannerGaleria ;
             display: grid;
             grid-template-columns: repeat(8, 1fr);
-            grid-gap: 20px;
-            grid-auto-rows: 150x;
-            margin-top: 20px;
+            grid-gap: $cons/2;
+            grid-auto-rows: $cons*3;
+            margin-top: $cons/2;
             img {
                 width: 100%;
                 height: 100%;
