--- a/css/clientes.css
+++ b/css/clientes.css
@@ -64,6 +64,4 @@
 }
 .mainServicio .servics .servicsImg .galeriaItem:nth-child(8) {
   grid-column-start: span 2;
-}
-
-/*aplicar operaciones y constantes *//*# sourceMappingURL=clientes.css.map */
+}/*# sourceMappingURL=clientes.css.map */
