--- a/css/contacto.css
+++ b/css/contacto.css
@@ -1,3 +1,20 @@
+/*Clases placeholder*/
+.contact .formContact .inputGroup option, .contact .formContact .inputGroup label {
+  font-size: 14px;
+  color: white;
+  display: block;
+}
+
+.contact .formContact input[type=submit], .contact .formContact .inputGroup input[type=text],
+.contact .formContact .inputGroup input[type=email],
+.contact .formContact .inputGroup input[type=tel],
+.contact .formContact .inputGroup select[type=selec],
+.contact .formContact .inputGroup textarea {
+  font-family: "Poppins", sans-serif;
+  font-size: 16px;
+  color: white;
+}
+
 /*Construccion*/
 .mainContacto {
   display: grid;
@@ -24,9 +41,6 @@
 .contact .formContact .inputGroup input[type=tel],
 .contact .formContact .inputGroup select[type=selec],
 .contact .formContact .inputGroup textarea {
-  font-family: "Poppins", sans-serif;
-  font-size: 16px;
-  color: white;
   width: 100%;
   outline: none;
   padding: 10px 10px 10px 10px;
@@ -36,24 +50,15 @@
   background-color: #181818;
 }
 .contact .formContact .inputGroup label {
-  font-size: 14px;
   font-weight: 600;
-  color: white;
-  display: block;
   margin-bottom: 5px;
 }
 .contact .formContact .inputGroup option {
-  font-size: 14px;
-  color: white;
-  display: block;
   margin-bottom: 5px;
   border-radius: 0px;
 }
 .contact .formContact input[type=submit] {
   background: rgba(103, 212, 255, 0);
-  font-family: "Poppins", sans-serif;
-  font-size: 16px;
-  color: white;
   border-radius: 1px;
   border: 2px solid white;
   cursor: pointer;
