--- a/css/curriculum.css
+++ b/css/curriculum.css
@@ -1,3 +1,10 @@
+/*Clases placeholder   @extend*/
+.mainCurriculum .tecnologias .bannerGaleria img, .mainCurriculum .datosPhoto img {
+  width: 100%;
+  -o-object-fit: cover;
+  object-fit: cover;
+}
+
 /*Construccion*/
 .mainCurriculum {
   display: grid;
@@ -19,10 +26,7 @@
 .mainCurriculum .datosPhoto img {
   justify-content: center;
   padding-left: 30%;
-  width: 100%;
   height: auto;
-  -o-object-fit: cover;
-  object-fit: cover;
 }
 .mainCurriculum .tecnologias {
   grid-area: tecnologias;
@@ -42,10 +46,7 @@
   margin-top: 25px;
 }
 .mainCurriculum .tecnologias .bannerGaleria img {
-  width: 100%;
   height: 100%;
-  -o-object-fit: cover;
-  object-fit: cover;
 }
 .mainCurriculum .expericiaProyec {
   grid-area: expericiaProyec;
