--- a/css/curriculum.css
+++ b/css/curriculum.css
@@ -1,4 +1,4 @@
-/*Clases placeholder   @extend*/
+/*Clases placeholder*/
 .mainCurriculum .tecnologias .bannerGaleria img, .mainCurriculum .datosPhoto img {
   width: 100%;
   -o-object-fit: cover;
