--- a/scss/portafolio.scss
+++ b/scss/portafolio.scss
@@ -1,10 +1,20 @@
 $cons:50px;
-/*Construccion*/
-.mainPortafolio {
+/*Clases placeholder   @extend*/
+%folio{
     display: grid;
     grid-template-columns: repeat(2, 1fr);
-    grid-template-areas: "videoPortada videoPortada" "textColunm textColunm1" "cliente cliente" "cliente1 cliente1";
     grid-template-rows: auto;
+}
+%imag{
+    width: 100%;
+    height: 100%;
+    -o-object-fit: cover;
+        object-fit: cover;
+}
+/*Construccion*/
+.mainPortafolio {
+    @extend %folio;
+    grid-template-areas: "videoPortada videoPortada" "textColunm textColunm1" "cliente cliente" "cliente1 cliente1";
     margin-bottom: $cons*2;
     grid-gap: $cons;
     .videoPortada { grid-area: videoPortada; }
@@ -12,10 +22,8 @@ $cons:50px;
     .textColunm1 { grid-area: textColunm1; margin-right: $cons;}
     .cliente {
         grid-area: cliente;
-        display: grid;
-        grid-template-columns: repeat(2, 1fr);
+        @extend %folio;
         grid-template-areas: "clienteText clienteImg" "clienteImg1 clienteText1";
-        grid-template-rows: auto;
         grid-gap: $cons;
         padding: $cons;
         .clienteText {
@@ -28,13 +36,10 @@ $cons:50px;
             grid-template-columns: repeat(2, 1fr);
             grid-gap: $cons-40;
             img {
-                width: 100%;
-                height: 100%;
-                -o-object-fit: cover;
-                    object-fit: cover;
+                @extend %imag;
             }
         }
-        .clienteItem:nth-child(1) {
+        .clienteItem:nth-child(2) {
             grid-row-start: span 2;
         }
         .clienteImg1 {
@@ -48,15 +53,14 @@ $cons:50px;
             text-align: end;
             margin-top: $cons*3;
             img {
-                width: 100%;
-                height: 100%;
-                -o-object-fit: cover;
-                    object-fit: cover;
+                @extend %imag;
             }
         }
         .clienteItem1:nth-child(2) {
             grid-row-start: span 2;
-            grid-template-columns: repeat(2, 1fr);
+            img {
+                @extend %imag;
+            }
         }
     }
     .cliente1 {
